# proyavka

./: .gitignore  README.md  requirements-ml.txt  requirements.txt
.github/workflows/: desktop.yml
app/: jobs.py  main.py  settings.py
app/engines/: __init__.py  base.py  fake.py  ncnn.py  torch_engine.py
desktop/: .gitignore
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/scripts/: ci-win-smoke.sh  fetch-assets.sh  win-smoke.sh
desktop/src-tauri/src/: lib.rs  main.rs
docs/: SPEC.md
infra/: proyavka.service
infra/gpu/: lxc-gpu.conf  reclaim-gpu.sh  release-gpu.sh
scripts/: deploy.sh  download-models.sh
static/: api.js  app.js  index.html  style.css
tests/: conftest.py  e2e_playwright.py  test_api.py
