[package]
name = "proyavka"
version = "1.0.0"
description = "Проявка — улучшайзер фотографий"
authors = ["Seva"]
edition = "2021"

[lib]
name = "proyavka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
